clase8/k8/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: tarea-clase8
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
